--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 #header {
 display: flex;
 }
+
 #header-img {
   height: 60px;
 }
@@ -9,6 +10,29 @@ display: flex;
 text-align: center;
 }
 
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
+  #video {
+    width: 90%;
+  }
+}
+
+@media {
+  #header {
+    justify-content: space-around;
+  }
+}
+
+.center-middle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+/* Form styles */
 .container {
 max-width: 400px;
 width: 100%;
@@ -16,23 +40,23 @@ margin: 30px auto 0;
 position: relative;
 }
 
-#contact input[type="text"],
-#contact input[type="email"],
-#contact input[type="tel"],
-#contact input[type="url"],
-#contact textarea,
-#contact button[type="submit"] {
+#form input[type="text"],
+#form input[type="email"],
+#form input[type="tel"],
+#form input[type="url"],
+#form textarea,
+#form button[type="submit"] {
 font: 400 12px/16px "Roboto", Helvetica, Arial, sans-serif;
 }
 
-#contact h3 {
+#form h3 {
 display: block;
 font-size: 30px;
 font-weight: 300;
 margin-bottom: 10px;
 }
 
-#contact h4 {
+#form h4 {
 margin: 5px 0 15px;
 display: block;
 font-size: 13px;
@@ -47,11 +71,11 @@ padding: 0;
 width: 100%;
 }
 
-#contact input[type="text"],
-#contact input[type="email"],
-#contact input[type="tel"],
-#contact input[type="url"],
-#contact textarea {
+#form input[type="text"],
+#form input[type="email"],
+#form input[type="tel"],
+#form input[type="url"],
+#form textarea {
 width: 100%;
 border: 1px solid #ccc;
 background: #FFF;
@@ -60,24 +84,24 @@ padding: 10px;
 box-sizing: border-box;
 }
 
-#contact input[type="text"]:hover,
-#contact input[type="email"]:hover,
-#contact input[type="tel"]:hover,
-#contact input[type="url"]:hover,
-#contact textarea:hover {
+#form input[type="text"]:hover,
+#form input[type="email"]:hover,
+#form input[type="tel"]:hover,
+#form input[type="url"]:hover,
+#form textarea:hover {
 -webkit-transition: border-color 0.3s ease-in-out;
 -moz-transition: border-color 0.3s ease-in-out;
 transition: border-color 0.3s ease-in-out;
 border: 1px solid #aaa;
 }
 
-#contact textarea {
+#form textarea {
 height: 100px;
 max-width: 100%;
 resize: none;
 }
 
-#contact button[type="submit"] {
+#form button[type="submit"] {
 cursor: pointer;
 width: 100%;
 border: none;
@@ -88,14 +112,14 @@ padding: 10px;
 font-size: 15px;
 }
 
-#contact button[type="submit"]:hover {
+#form button[type="submit"]:hover {
 background: #43A047;
 -webkit-transition: background 0.3s ease-in-out;
 -moz-transition: background 0.3s ease-in-out;
 transition: background-color 0.3s ease-in-out;
 }
 
-#contact button[type="submit"]:active {
+#form button[type="submit"]:active {
 box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
 }
 
@@ -103,8 +127,8 @@ box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
 text-align: center;
 }
 
-#contact input:focus,
-#contact textarea:focus {
+#form input:focus,
+#form textarea:focus {
 outline: 0;
 border: 1px solid #aaa;
 }
